--- a/.github/workflows/packeges.yml
+++ b/.github/workflows/packeges.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: goreleaser/goreleaser-action@v2
         with:
           version: latest
-          args: release --rm-dist
+          args: release
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
           
